feat(poller): full EventSelection tag filtering in NOTIFY/LISTEN wakeup
Extends Phase D to cover the complete EventSelection contract (requiredTags,
anyOfTags, exactTags) in the pg_notify payload and subscriber dispatch — matching
how SQL and in-memory shared-fetch routing already work.

Sender side:
- pg_notify payload now carries tag KEY NAMES (not values) after a '|' separator:
  "WalletDeposited,WalletCreated|wallet_id,region,currency"
- Only keys are encoded; high-cardinality values (UUIDs, amounts) are intentionally
  excluded to keep the payload compact and avoid frequent wildcard fallback.
- Exact-tag value matching is left to the SQL filter layer (conservative but correct).
- Falls back to types-only, then "*", if encoding exceeds 7900 bytes.
- Both appendIf() and executeInTransaction() (C1) send tag keys.

Receiver side:
- Subscriber registration now accepts requiredTagKeys, anyOfTagKeys, exactTagKeys
  alongside eventTypes (ProcessorWakeupSource interface extended with default overloads).
- BatchState carries tagKeys (Set<String>) in addition to types.
- shouldWake() checks all four dimensions: types, requiredTags, anyOfTags, exactTags
  (key-presence only for exactTags — value verified by SQL).
- Tag checks skipped when batch has no tag section (old-format payload = conservative wake).

Module wiring:
- ViewsAutoConfiguration, AutomationsAutoConfiguration, OutboxAutoConfiguration compute
  module-level tag criteria unions from all processor EventSelections and pass them to
  EventProcessorFactory / EventProcessorImpl via new constructor parameters.
- Union rule: if any processor has empty criteria for a dimension, that dimension is not
  filtered at the module level (safe — the permissive processor would always match).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>